Fixed #include errors with Cinder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,13 +50,14 @@ get_filename_component(APP_PATH "${CMAKE_CURRENT_SOURCE_DIR}/" ABSOLUTE)
 include("${CINDER_PATH}/proj/cmake/modules/cinderMakeApp.cmake")
 
 list(APPEND CORE_SOURCE_FILES src/core/data_model.cc
-                              src/core/classifier.cc)
+                              src/core/classifier.cc) 
 
 list(APPEND SOURCE_FILES    ${CORE_SOURCE_FILES}
                             src/visualizer/naive_bayes_app.cc
                             src/visualizer/sketchpad.cc)
 
-list(APPEND TEST_FILES tests/test_data_model.cc)
+list(APPEND TEST_FILES tests/test_data_model.cc
+                       tests/test_classifier.cc)
 
 add_executable(train-model apps/train_model_main.cc ${CORE_SOURCE_FILES})
 target_include_directories(train-model PRIVATE include)
